--- a/css/styles.css
+++ b/css/styles.css
@@ -9797,7 +9797,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #373380 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
