--- a/css/styles.css
+++ b/css/styles.css
@@ -10012,14 +10012,15 @@ p {
 .page-section h2.section-heading {
   font-size: 2.5rem;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 .page-section h3.section-subheading {
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   margin-bottom: 4rem;
+  margin-top: 1rem;
 }
 
 @media (min-width: 768px) {
