--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,7 @@ mark,
 .img-fluid {
   max-width: 100%;
   height: auto;
+  margin-top: 12px;
 }
 
 .img-thumbnail {
@@ -10015,8 +10016,8 @@ p {
   margin-bottom: 3rem;
 }
 .page-section h3.section-subheading {
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: 1.1rem;
+  font-weight: 400;
   font-style: italic;
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   margin-bottom: 4rem;
@@ -10321,7 +10322,7 @@ header.masthead .masthead-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #fed136;
+  background-color: whitesmoke;
 }
 .timeline > li .timeline-image h4 {
   font-size: 10px;
@@ -10353,6 +10354,7 @@ header.masthead .masthead-heading {
   color: inherit;
 }
 .timeline .timeline-heading h4.subheading {
+  margin-top: 0.5rem;
   text-transform: none;
 }
 .timeline .timeline-body > ul,
