--- a/css/styles.css
+++ b/css/styles.css
@@ -10140,7 +10140,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/background.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10194,7 +10194,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(0, 0, 0, 0.5);
   align-items: center;
   justify-content: center;
   opacity: 0;
