--- a/css/styles.css
+++ b/css/styles.css
@@ -10033,7 +10033,7 @@ p {
 }
 
 ::selection {
-  background: #fed136;
+  background: #c4c5c6;
   text-shadow: none;
 }
 
@@ -10075,9 +10075,9 @@ img::-moz-selection {
   padding: 0.75rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.75rem;
-  color: #fff;
+  color: black;
   text-transform: uppercase;
-  background-color: #fed136;
+  background-color: white;
   border: 0;
 }
 #mainNav .navbar-brand {
@@ -10097,7 +10097,8 @@ img::-moz-selection {
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+  color: white;
+  border-bottom:solid 2px white;
 }
 
 @media (min-width: 992px) {
