--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ hr {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  text-align: left;
 }
 
 p {
@@ -101,9 +102,10 @@ abbr[data-original-title] {
 }
 
 address {
-  margin-bottom: 1rem;
-  font-style: normal;
+  font-style: italic;
   line-height: inherit;
+  color: white;
+  text-align: left
 }
 
 ol,
@@ -360,7 +362,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
 }
@@ -413,10 +415,13 @@ h6, .h6 {
 }
 
 .display-4 {
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.2;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 2;
+  color: white;
+  margin-top:40px;
 }
+
 
 hr {
   margin-top: 1rem;
@@ -2441,7 +2446,7 @@ textarea.form-control {
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2682,32 +2687,32 @@ fieldset:disabled a.btn {
 
 .btn-dark {
   color: #fff;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: darkred;
+  border-color: darkred;
 }
 .btn-dark:hover {
   color: #fff;
-  background-color: #23272b;
-  border-color: #1d2124;
+  background-color: darkred;
+  border-color: darkred;
 }
 .btn-dark:focus, .btn-dark.focus {
   color: #fff;
-  background-color: #23272b;
-  border-color: #1d2124;
-  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+  background-color: darkred;
+  border-color: darkred;
+  box-shadow: 0 0 0 0rem rgba(82, 88, 93, 0.5);
 }
 .btn-dark.disabled, .btn-dark:disabled {
   color: #fff;
-  background-color: #343a40;
-  border-color: #343a40;
+  background-color: darkred;
+  border-color: darkred;
 }
 .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active, .show > .btn-dark.dropdown-toggle {
   color: #fff;
-  background-color: #1d2124;
-  border-color: #171a1d;
+  background-color: darkred;
+  border-color: black;
 }
 .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-dark.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+  box-shadow: 0 0 0 0rem rgba(82, 88, 93, 0.5);
 }
 
 .btn-outline-primary {
@@ -7257,6 +7262,7 @@ button.bg-dark:focus {
 }
 .float-left {
   float: left !important;
+  margin-top: -0px;
 }
 
 .float-right {
@@ -7565,6 +7571,7 @@ button.bg-dark:focus {
 .ml-2,
 .mx-2 {
   margin-left: 0.5rem !important;
+  margin-left: 0.5rem !important;
 }
 
 .m-3 {
@@ -7598,6 +7605,7 @@ button.bg-dark:focus {
 .mt-4,
 .my-4 {
   margin-top: 1.5rem !important;
+    
 }
 
 .mr-4,
@@ -9938,6 +9946,7 @@ blockquote {
   tr,
 img {
     page-break-inside: avoid;
+    
   }
 
   p,
@@ -10059,13 +10068,15 @@ img::-moz-selection {
 }
 
 .btn-social {
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 2.0rem;
+  width: 2.0rem;
   display: inline-flex;
   align-items: center;
+  color: black;
+  background-color: darkred;
   justify-content: center;
   padding: 0;
-  border-radius: 100%;
+  border-radius: 20%;
 }
 
 #mainNav {
